# sampling_mpc

./: .gitignore  .gitmodules  Dockerfile  LICENSE  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  build_workspace.sh  compose.yml  compose_external_ros_master.yml  impedance_control.py  impedance_control_gpu.py  pyproject.toml  test_impedance_control.py  util.py
examples/: constrained_particle.py  double_pendulum.py  franka.py  franka_control_ros.py  franka_control_ros_particle.py  franka_push.py  franka_reach.py  parse_args.py  particle.py  particle3d.py  particle_box.py  particle_collision.py  particle_corridor.py  pushbox.py
franka/: docker-compose.yml
franka/.docker/: Dockerfile  cartesian_impedance_example_controller_no_marker.launch
hydrax/: __init__.py  alg_base.py  task_base.py  util.py
hydrax/algs/: __init__.py  ccem.py  cem.py  evosax.py  mppi.py  predictive_sampling.py
hydrax/controllers/: impedance_controllers.py
hydrax/simulation/: asynchronous.py  deterministic.py
hydrax/tasks/: constrained_particle.py  double_pendulum.py  franka_push.py  franka_reach.py  nugus_height.py  particle.py  particle3d.py  particle_box.py  particle_collision.py  particle_corridor.py  pushbox.py
hydrax/utils/: video.py
models/franka_emika_panda/: mjx_panda_nohand.xml
mppi/: benchmarking.py  impedance_control.py
mppi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mppii/: alg_base.py  impedance_control.py  impedance_control_gpu.py  rollout.py  sim.py  task_base.py  util.py
mppii.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mppii/algs/: cem.py  evosax.py  mppi.py  mppii.py  predictive_sampling.py
mppii/simulation/: asynchronous.py  deterministic.py
mppii/tasks/: franka.py  franka_push.py  franka_reach.py  particle.py  particle_corridor.py  pushbox.py
ros/: CMakeLists.txt  cartesian_impedance_example_controller_no_marker.launch  franka.py  franka_control_ros.py  franka_reach.py  hydrax_hardware_interface.py  kinova.py  move_to_start.py  move_to_start_franka.py  move_to_start_kinova.py  package.xml
ros/examples/: franka_push.py  franka_reach.py  kinova_reach.py
sys_id/: collect_data.py  compare_impedance_control.py  compare_kinematics.py  plot_collected_data.py  system_identification.py
test/: box.py  impedance_control.py  impedance_control_difference.py  impedance_control_gpu.py  mocap.py  mocap_box.py  mocap_box_sim.py  ros.py  ros_cartesian_pose.py  sim.py  spline.py  util.py
(+31 files in other folders)
