[project]
name = "sampling_mpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evosax",
    "jax[cuda12]>=0.5.2",
    "matplotlib>=3.10.1",
    "mujoco>=3.3.0",
    "mujoco-mjx>=3.3.0",
    "roslibpy>=1.8.1",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.19.0",
    "tensorflow>=2.19.0",
]
[tool.setuptools]
packages = ["hydrax"]

[tool.uv.sources]
evosax = { git = "https://github.com/RobertTLange/evosax", rev = "04f9ad4680900a7a56becb39dcccf1ead3389669" }

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
