[project]
name = "sampling_mpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "evosax",
    "jax[cuda12]>=0.5.2",
    "matplotlib>=3.10.1",
    "mujoco>=3.3.0",
    "mujoco-mjx>=3.3.0",
    "roslibpy>=1.8.1",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.19.0",
    "tensorflow>=2.19.0",
    "mediapy>=1.2.2",
    "optuna>=4.2.1",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "qtm-rt>=3.0.2",
    "interpax>=0.3.7",
    "pytest>=8.3.5",
    "pynput>=1.8.1",
]

[tool.uv.sources]
evosax = { git = "https://github.com/RobertTLange/evosax", rev = "04f9ad4680900a7a56becb39dcccf1ead3389669" }
hydrax = { path = "./hydrax-core" }

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

[tool.setuptools.packages.find]
include = ["hydrax-core*"]      # only this package tree goes in the wheel
exclude = ["ros*", "sys_id*", "recordings*"]
